--- a/script/css/shared.css
+++ b/script/css/shared.css
@@ -1160,6 +1160,7 @@ div ul.sb-menu,
   top: 5px;
   width: 40px;
   height: 40px;
+  object-fit: cover;
   border-radius: 50%;
   display: block;
 }
